@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.68 2010-03-01 22:05:11 guru Exp $
+#	$Id: Makefile,v 1.69 2010-05-22 21:19:49 guru Exp $
 #
 #		Makefile for GMT coast suite
 #
@@ -33,7 +33,7 @@ DEFINES		= -DDVER=\"$(GSHHS_DATA_VERSION)\" -DYEAR=`date +%Y`
 PREV_VERSION	= 2.0.2
 # These are the values to use for the next GMT version 4.5.3
 VERSION			= 4.5
-GSHHS_DATA_VERSION	= 2.0.3
+GSHHS_DATA_VERSION	= 2.1
 GSHHS_PROG_VERSION	= 1.12
 
 # Douglas-Peucker parameters:
@@ -134,7 +134,7 @@ shape-gshhs:
 		mv GSHHS_c_L[1-4]/* GSHHS_shp/c
 		cp GSHHS+WDBII/README.TXT GSHHS_shp
 		zip -r -q -v -9 GSHHS_shp_$(GSHHS_DATA_VERSION).zip GSHHS_shp/*
-		rm -rf GSHHS_[fhilc]_L[1-4] GSHHS_[fhilc]_L[1-4].gmt
+#		rm -rf GSHHS_[fhilc]_L[1-4] GSHHS_[fhilc]_L[1-4].gmt
 
 # Make archive targets:
 
